@@ -2,12 +2,13 @@ import java.time.OffsetDateTime
 import java.time.format.DateTimeFormatter
 
 plugins {
-    id 'java-library'
+    id 'io.seqera.wave.java-library-conventions'
     id 'io.seqera.wave.groovy-application-conventions'
-    id "com.github.johnrengelman.shadow" version "7.1.1"
-    id "io.micronaut.minimal.application" version "3.7.0"
+    id "com.github.johnrengelman.shadow" version "8.1.1"
+    id "io.micronaut.minimal.application" version "4.1.1"
     id "com.google.cloud.tools.jib" version "3.4.2"
     id 'org.asciidoctor.jvm.convert' version '3.3.2'
+    id 'jacoco'
 }
 
 String gitVersion() {
@@ -28,72 +29,83 @@ repositories {
 }
 
 dependencies {
-    annotationProcessor("io.micronaut:micronaut-http-validation")
-    compileOnly("io.micronaut.data:micronaut-data-processor")
-    compileOnly("io.micronaut:micronaut-inject-groovy")
-    compileOnly("io.micronaut:micronaut-http-validation")
-    implementation("jakarta.persistence:jakarta.persistence-api:3.0.0")
-    api 'io.seqera:lib-mail:1.0.0'
-    api 'io.seqera:wave-api:0.10.0'
-    api 'io.seqera:wave-utils:0.12.0'
-
-    implementation("io.micronaut:micronaut-http-client")
-    implementation("io.micronaut:micronaut-jackson-databind")
-    implementation("io.micronaut.groovy:micronaut-runtime-groovy")
-    implementation("io.micronaut.reactor:micronaut-reactor")
-    implementation("io.micronaut.reactor:micronaut-reactor-http-client")
-    implementation("jakarta.annotation:jakarta.annotation-api")
-    implementation("io.micronaut:micronaut-validation")
+    annotationProcessor 'io.micronaut.validation:micronaut-validation-processor'
+    annotationProcessor 'io.micronaut:micronaut-http-validation'
+    compileOnly 'io.micronaut.data:micronaut-data-processor'
+    compileOnly 'io.micronaut:micronaut-inject-groovy'
+    compileOnly 'io.micronaut:micronaut-http-validation'
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
+    api 'io.seqera:lib-mail:1.2.1'
+    api 'io.seqera:wave-api:0.14.0'
+    api 'io.seqera:wave-utils:0.15.0'
+    implementation 'io.seqera:lib-crypto:1.0.0'
+    implementation 'io.micronaut:micronaut-http-client'
+    implementation 'io.micronaut:micronaut-jackson-databind'
+    implementation 'io.micronaut.groovy:micronaut-runtime-groovy'
+    implementation 'io.micronaut.reactor:micronaut-reactor'
+    implementation 'io.micronaut.reactor:micronaut-reactor-http-client'
+    implementation 'jakarta.annotation:jakarta.annotation-api'
+    implementation 'io.micronaut.validation:micronaut-validation'
     implementation 'io.micronaut.security:micronaut-security'
-    implementation "org.codehaus.groovy:groovy-json"
-    implementation "org.codehaus.groovy:groovy-nio"
-    implementation 'com.google.guava:guava:32.1.2-jre'
+    implementation 'io.micronaut:micronaut-websocket'
+    implementation 'org.apache.groovy:groovy-json'
+    implementation 'org.apache.groovy:groovy-nio'
+    implementation 'com.google.guava:guava:33.3.1-jre'
     implementation 'dev.failsafe:failsafe:3.1.0'
-    implementation('io.projectreactor:reactor-core')
-    implementation("io.seqera:tower-crypto:22.4.0-watson") { transitive = false }  // to be replaced with 22.4.0 once released
-    implementation 'org.apache.commons:commons-compress:1.24.0'
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
-    implementation 'io.kubernetes:client-java:19.0.0'
-    implementation 'io.kubernetes:client-java-api-fluent:18.0.1'
-    implementation 'com.google.code.gson:gson:2.9.0'
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
+    implementation 'io.micronaut.reactor:micronaut-reactor'
+    implementation 'io.micronaut.reactor:micronaut-reactor-http-client'
+    implementation 'org.apache.commons:commons-compress:1.27.1'
+    implementation 'org.apache.commons:commons-lang3:3.17.0'
+    implementation 'io.kubernetes:client-java:21.0.1'
+    implementation 'io.kubernetes:client-java-api-fluent:21.0.1'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
-    implementation 'com.squareup.moshi:moshi:1.14.0'
-    implementation 'com.squareup.moshi:moshi-adapters:1.14.0'
-    implementation 'redis.clients:jedis:5.0.2'
-    implementation "io.github.resilience4j:resilience4j-ratelimiter:0.17.0"
+    implementation 'com.squareup.moshi:moshi:1.15.1'
+    implementation 'com.squareup.moshi:moshi-adapters:1.15.1'
+    implementation 'redis.clients:jedis:5.1.3'
+    implementation 'io.github.resilience4j:resilience4j-ratelimiter:0.17.0'
+    implementation 'io.micronaut:micronaut-retry'
     // caching deps
-    implementation("io.micronaut.cache:micronaut-cache-core")
-    implementation("io.micronaut.cache:micronaut-cache-caffeine")
-    implementation("io.micronaut.aws:micronaut-aws-parameter-store")
-    implementation "software.amazon.awssdk:ecr"
-    implementation "software.amazon.awssdk:ecrpublic"
+    implementation 'io.micronaut.cache:micronaut-cache-core'
+    implementation 'io.micronaut.cache:micronaut-cache-caffeine'
+    implementation 'io.micronaut.aws:micronaut-aws-parameter-store'
+    implementation 'software.amazon.awssdk:ecr'
+    implementation 'software.amazon.awssdk:ecrpublic'
     implementation 'software.amazon.awssdk:ses'
-    implementation 'org.yaml:snakeyaml:2.0'
+    implementation 'org.yaml:snakeyaml:2.2'
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+    implementation 'org.luaj:luaj-jse:3.0.1'
     //object storage dependency
-    implementation("io.micronaut.objectstorage:micronaut-object-storage-aws")
+    implementation 'io.micronaut.objectstorage:micronaut-object-storage-aws'
     // include sts to allow the use of service account role - https://stackoverflow.com/a/73306570
     // this sts dependency is require by micronaut-aws-parameter-store,
     // not directly used by the app, for this reason keeping `runtimeOnly`
-    runtimeOnly "software.amazon.awssdk:sts"
-
-    runtimeOnly("io.netty:netty-tcnative-boringssl-static:2.0.0.Final")
-    runtimeOnly("javax.xml.bind:jaxb-api:2.3.1")
-    testImplementation("org.testcontainers:testcontainers")
-    testImplementation("org.testcontainers:mysql:1.17.3")
+    runtimeOnly 'software.amazon.awssdk:sts'
+    runtimeOnly 'io.netty:netty-tcnative-boringssl-static:2.0.0.Final'
+    runtimeOnly 'javax.xml.bind:jaxb-api:2.3.1'
+    testImplementation 'org.testcontainers:testcontainers'
+    testImplementation 'org.testcontainers:mysql:1.17.3'
 
     // --
-    implementation("ch.qos.logback:logback-classic:1.4.8")
+    implementation 'ch.qos.logback:logback-classic:1.5.12'
 
     // rate limit
-    implementation 'com.github.seqeralabs:spillway:7b72700293'
+    implementation 'com.coveo:spillway:3.0.0'
 
     // monitoring
-    implementation "io.micronaut.micrometer:micronaut-micrometer-registry-prometheus"
+    implementation 'io.micronaut.micrometer:micronaut-micrometer-core'
+    implementation 'io.micronaut.micrometer:micronaut-micrometer-registry-prometheus'
     // Also required to enable endpoint
-    implementation "io.micronaut:micronaut-management"
+    implementation 'io.micronaut:micronaut-management'
     //views
-    implementation("io.micronaut.views:micronaut-views-handlebars")
+    implementation 'io.micronaut.views:micronaut-views-handlebars'
+
+    // upgrade indirect dependencies 
+    runtimeOnly 'org.bouncycastle:bcpkix-jdk18on:1.78'
+    runtimeOnly 'org.bitbucket.b_c:jose4j:0.9.4'
+    runtimeOnly 'io.netty:netty-bom:4.1.115.Final'
+    runtimeOnly 'com.google.protobuf:protobuf-java:4.27.5'
 }
 
 application {
@@ -116,7 +128,7 @@ micronaut {
 //
 jib {
     from {
-        image = 'cr.seqera.io/public/nf-jdk:corretto-17.0.10-al2023-jemalloc'
+        image = 'cr.seqera.io/public/nf-jdk:corretto-21-al2023-jemalloc'
         platforms {
             platform { architecture = 'amd64'; os = 'linux' }
         }
@@ -146,8 +158,7 @@ jib {
 
 run{
     def envs = findProperty('micronautEnvs')
-    // note: "--enable-preview" is required to use virtual threads on Java 19 and 20
-    def args = ["-Dmicronaut.environments=$envs","--enable-preview"]
+    def args = ["-Dmicronaut.environments=$envs","-Djdk.tracePinnedThreads=short", "--add-opens","java.base/java.lang=ALL-UNNAMED"]
     if( environment['JVM_OPTS'] ) args.add(environment['JVM_OPTS'])
     jvmArgs args
     systemProperties 'DOCKER_USER': project.findProperty('DOCKER_USER') ?: environment['DOCKER_USER'],
@@ -182,3 +193,23 @@ task buildInfo { doLast {
 buildInfo.dependsOn processResources
 compileGroovy.dependsOn buildInfo
 
+jacoco {
+    toolVersion '0.8.12'
+}
+/**
+ * Code coverage with JaCoCo.
+ * See: https://www.jacoco.org/; https://docs.gradle.org/current/userguide/jacoco_plugin.html
+ */
+// Code coverage report is always generated after tests run
+test { finalizedBy jacocoTestReport }
+jacocoTestReport {
+    // Tests are required to run before generating the code coverage report
+    dependsOn test
+    // Remove closure classes from the report, as they are already covered by the enclosing class coverage stats adding only noise.
+    // See: https://stackoverflow.com/questions/39453696
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect { dir ->
+            fileTree(dir: dir, excludes: ['**/*$*_closure*'])
+        }))
+    }
+}
